# transcoder

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
k8s/: deployment.yaml  grafanadashboard.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/transcoder/: __init__.py  config.py  decision.py  ffmpeg.py  kafka.py  katalog.py  main.py  worker.py
tests/: test_worker_shape.py
